Add clicked order style

--- a/pages/ordersPage.html
+++ b/pages/ordersPage.html
@@ -40,7 +40,14 @@
         <div class="MainPage" id="Main">
 
             <p class="Title">Orders</p>
-            <!--Orders will appear here-->
+
+            <div class="OrdersWrapper" id="OrdersWrapper">
+                <!--Orders will appear here-->
+            </div>
+
+            <div class="DishesWrapper" id="DishesWrapper">
+                
+            </div>
             
         </div>
 
