--- a/pages/usersPage.html
+++ b/pages/usersPage.html
@@ -3,6 +3,7 @@
         <title>changskitchen</title>
 
         <link rel="stylesheet" type="text/css" href="../css/topNavStyle.css">
+        <link rel="stylesheet" type="text/css" href="../css/usersPage.css">
 
         <script src="../js/topNavBar.js"></script>
     </head>
@@ -37,6 +38,16 @@
 
         <div class="MainPage">
             <p class="Title">Users</p>
+
+            <div class="Users">
+
+                <div class="UserWrapper">
+                    <p class="Name">Truong Dinh Dong</p>
+                    <p class="Rank">Loyal User</p>
+                    <p class="Orders">Number of Orders: 20</p>
+                </div>
+
+            </div>
         </div>
     </body>
 </html>
