--- a/pages/menuPage.html
+++ b/pages/menuPage.html
@@ -2,11 +2,11 @@
     <head>
         <title>changskitchen</title>
 
-        <link rel="stylesheet" type="text/css" href="../css/topNavStyle.css">
+        <link rel="stylesheet" type="text/css" href="../css/support/topNavStyle.css">
         <link rel="stylesheet" type="text/css" href="../css/design.css">
 
+        <script src="../js/support/topNavBar.js"></script>
         <script src="../js/method.js"></script>
-        <script src="../js/topNavBar.js"></script>
 
     </head>
 
