--- a/pages/ordersPage.html
+++ b/pages/ordersPage.html
@@ -2,10 +2,10 @@
     <head>
         <title>changskitchen</title>
 
-        <link rel="stylesheet" type="text/css" href="../css/topNavStyle.css">
+        <link rel="stylesheet" type="text/css" href="../css/support/topNavStyle.css">
         <link rel="stylesheet" type="text/css" href="../css/ordersPage.css">
 
-        <script src="../js/topNavBar.js"></script>
+        <script src="../js/support/topNavBar.js"></script>
         <script src="../js/ordersPage.js"></script>
     </head>
 
