Add retrieve password page

--- a/public/Authentication/LoginPage/LogInPage.html
+++ b/public/Authentication/LoginPage/LogInPage.html
@@ -84,7 +84,7 @@
 							Forgot
 						</span>
 
-						<a href="#" class="txt2 hov1">
+						<a href="../RetrievePassword/retrivePasswordPage.html" class="txt2 hov1">
 							Username / Password?
 						</a>
 					</div>
