Change background color

--- a/public/indexPage/index.html
+++ b/public/indexPage/index.html
@@ -64,7 +64,7 @@
         <h1 class="welcome">Welcome to</h1>
         <h1 class="title">Chang's Kitchen</h1>
 
-        <a href="./Authentication/LoginPage/LogInPage.html">
+        <a href="/Authentication/LoginPage/LogInPage.html">
             <p>Sign In</p>
         </a>
 
