--- a/public/Authentication/LoginPage/LogInPage.html
+++ b/public/Authentication/LoginPage/LogInPage.html
@@ -74,15 +74,11 @@
 					</div>
 
 					<div class="container-login100-form-btn m-t-20" onclick="logIn();">
-						<p class="login100-form-btn">
-							Sign in
-						</p>
+						<p class="login100-form-btn">Sign in</p>
 					</div>
 
 					<div class="text-center p-t-45 p-b-4">
-						<span class="txt1">
-							Forgot
-						</span>
+						<span class="txt1">Forgot</span>
 
 						<a href="../RetrievePassword/retrivePasswordPage.html" class="txt2 hov1">
 							Username / Password?
