--- a/public/Authentication/LoginPage/LogInPage.html
+++ b/public/Authentication/LoginPage/LogInPage.html
@@ -26,6 +26,7 @@
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/public/views/support/css/loader.css">
 
 	<!--Firebase-->
 	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
